# srt2md

./: .gitignore  README.md  pyproject.toml
src/srt2md/: main.py  pyinstaller.py
